<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation"  >
    <string name="app_name">BikeRental</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_flash">FlashActivity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--下拉刷新相关-->
    <string name="pull_to_refresh_top_pull">下拉刷新,使劲拉</string>
    <string name="pull_to_refresh_top_release">你敢放我就敢刷新</string>
    <string name="pull_to_refresh_top_refreshing">好嘞，刷新中...</string>
    <string name="pull_to_refresh_bottom_pull">使劲往上拉</string>
    <string name="pull_to_refresh_bottom_release">放开我就刷新</string>
    <string name="pull_to_refresh_bottom_refreshing">好嘞,刷新中...</string>


    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="sure_password">确认密码</string>
    <string name="email">邮箱</string>
    <string name="cancel">取消</string>
    <string name="rent_bike">出租单车</string>
    <string name="rent">出租</string>
    <string name="hire">租用</string>
    <string name="logout">退出登陆</string>
    <string name="rent_amount_bike">出租大量单车</string>
    <string name="route_record">我的行程</string>
    <string name="title_activity_hire">HireActivity</string>
    <string name="bike_info">单车信息</string>
    <string name="bike_type">单车类型</string>
    <string name="rentSTime">出租日期</string>
    <string name="hire_time">出租时长</string>
    <string name="bike_phone">联系方式</string>
    <string name="bike_pass">锁密码</string>
    <string name="bike_detail">单车描述</string>
    <string name="hire_sure">骑行</string>
    <string name="hire_finish">结束骑行</string>
    <string name="user_setting">设置</string>
    <string name="hire_cost">预计费用</string>
    <string name="distance">距离起始位置</string>
    <string name="walk_time">步行时间</string>
    <string name="bike_owner">所属车主</string>
    <string name="biking_cost">预计费用</string>
    <string name="biking_distance">骑行路程</string>
    <string name="biking_time">骑行时间</string>
    <string name="trip_time">骑行时间: </string>
    <string name="trip_cost">骑行花费: </string>
    <string name="user_info">个人中心</string>
    <string name="user_setting_info">设置</string>
    <string name="avator">头像</string>
    <string name="nick_name">昵称</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="forget_password">忘记密码</string>
    <string name="get_back_pass">找回密码</string>

    <string name="forget_hint">请填写您注册所用邮箱，我们将为您的邮箱发送一封修改密码的邮件!</string>
    <string name="confirm">确定</string>
    <string name="save">保存</string>
    <string name="sex">性别</string>
    <string name="user_phone">手机号</string>
    <string name="bikeNo">自行车编号: </string>
    <string name="route_detail">行程详情</string>
    <string name="about_me">关于我们</string>
    <string name="app_type">v1.0</string>
    <string name="my_email">demeiyan199305@gmail.com</string>
    <string name="my_call">18351962086</string>
    <string name="my_link">https://demeiyan.github.io/about/</string>
    <string name="contract_type">联系电话</string>
    <string name="eemail">电子邮箱</string>
    <string name="station">官方网站</string>
    <string name="myInfo">河海大学计算机科学与技术严德美</string>
</resources>
