<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hhu.carrental.ui.AboutMeActivity"
    android:background="@drawable/login_bg"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/color_title">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:id="@+id/about_me_back"
            android:layout_centerVertical="true"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:clickable="true"
            android:src="@mipmap/return_icon"

            />
        <TextView
            android:id="@+id/title_bar_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:layout_centerInParent="true"
            android:text="@string/about_me"
            android:textColor="@color/base_color_text_white"
            android:textSize="16sp" />
    </RelativeLayout>
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:src="@drawable/appico" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/black_font"
        android:textSize="@dimen/text_size_large"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_type"
        android:textColor="@color/black_font"
        android:textSize="@dimen/text_size_large"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/text_white"
        android:layout_marginTop="50dp">

        <View  android:layout_height="1px"
            android:layout_width="match_parent"
            android:background="@color/color_line"

            />

        <RelativeLayout
            android:id="@+id/layout_rent_bike"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/btn_selector"
            android:minHeight="50dp"
            android:padding="10dp" >

            <TextView
                style="@style/Smile.TextView._Black"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/contract_type"
                android:drawableLeft="@mipmap/ico_phone"
                android:drawablePadding="5dp"
                android:textSize="@dimen/trip_small"/>

            <TextView
                android:id="@+id/my_call"
                style="@style/Smile.TextView._Black"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:text="@string/my_call"
                android:textSize="@dimen/trip_small"/>
        </RelativeLayout>

        <View  android:layout_height="1px"
            android:layout_width="match_parent"
            android:background="@color/color_line"

            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/btn_selector"
            android:minHeight="50dp"
            android:padding="10dp" >

            <TextView
                style="@style/Smile.TextView._Black"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/eemail"
                android:drawablePadding="5dp"
                android:drawableLeft="@mipmap/reset_pass_email"
                android:textSize="@dimen/trip_small"/>

            <TextView
                android:id="@+id/my_email"
                style="@style/Smile.TextView._Black"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:text="@string/my_email"
                android:textSize="@dimen/trip_small"/>
        </RelativeLayout>

        <View  android:layout_height="1px"
            android:layout_width="match_parent"
            android:background="@color/color_line"

            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/btn_selector"
            android:minHeight="50dp"
            android:padding="10dp" >

            <TextView
                style="@style/Smile.TextView._Black"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/station"
                android:drawableLeft="@mipmap/link"
                android:drawablePadding="5dp"
                android:textSize="@dimen/trip_small"/>

            <TextView
                android:id="@+id/my_link"
                style="@style/Smile.TextView._Black"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:text="@string/my_link"
                android:textSize="@dimen/trip_small"/>
        </RelativeLayout>

        <View  android:layout_height="1px"
            android:layout_width="match_parent"
            android:background="@color/color_line"

            />
    </LinearLayout>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myInfo"
        android:gravity="center_vertical"
        android:paddingBottom="20dp"
        android:textColor="@color/black_font"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
</LinearLayout>
