<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hhu.carrental.ui.HireActivity"
    android:background="@color/userinfo_back"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:gravity="center"
        android:text="@string/bike_info"
        android:textColor="@color/black_font"
        android:layout_height="@dimen/base_action_bar_height"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:textSize="@dimen/title_size"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_line_width_2"
        android:background="@drawable/base_horizontal_line" >
    </View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="100dp">
        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:text="@string/bike_type"
            android:textSize="15sp"
            android:layout_gravity="center_vertical"
            android:textColor="@android:color/darker_gray"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:id="@+id/bike_t"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="100dp">
        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:text="@string/hire_time"
            android:textSize="15sp"
            android:layout_gravity="center_vertical"
            android:textColor="@android:color/darker_gray"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:id="@+id/hire_time"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="100dp">
        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:text="@string/bike_phone"
            android:textSize="15sp"
            android:layout_gravity="center_vertical"
            android:textColor="@android:color/darker_gray"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:id="@+id/bike_con"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="100dp">
        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:text="@string/bike_pass"
            android:textSize="15sp"
            android:layout_gravity="center_vertical"
            android:textColor="@android:color/darker_gray"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:id="@+id/bike_paw"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="100dp">
        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:text="@string/bike_detail"
            android:textSize="15sp"
            android:layout_gravity="center_vertical"
            android:textColor="@android:color/darker_gray"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            android:text="464657867978"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:id="@+id/bike_desc"
            />
    </LinearLayout>

    <Button
        android:id="@+id/hire_sure"
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_action_bar_height"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="@drawable/btn_login_selector"
        android:gravity="center"
        android:text="@string/hire_sure"
        android:textColor="@color/base_color_text_white"
        android:textSize="@dimen/text_size_large" />
</LinearLayout>
