<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/color_title">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:id="@+id/forget_pass_back"
            android:layout_centerVertical="true"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:clickable="true"
            android:src="@mipmap/return_icon"

            />
        <TextView
            android:id="@+id/title_bar_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:layout_centerInParent="true"
            android:text="@string/get_back_pass"
            android:textColor="@color/base_color_text_white"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/btn_sure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/confirm"
            android:layout_alignParentRight="true"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="12sp"
            android:padding="10dp"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/text_white"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="20dp"
            android:gravity="center_vertical" >

            <EditText
                android:id="@+id/et_resetpassword_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/base_action_bar_height"
                android:background="@drawable/base_edit_input"
                android:drawableLeft="@mipmap/login_icon_email"
                android:drawablePadding="25dp"
                android:hint="@string/email"
                android:paddingLeft="15dp"
                android:paddingRight="0dp"
                android:textColorHint="#ffdddddd"
                android:textSize="@dimen/text_size_large"
                />

            <ImageView
                android:id="@+id/clear_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:clickable="true"
                android:src="@mipmap/clear_text"
                android:visibility="visible"
                android:layout_marginTop="5dp"
                android:layout_alignParentRight="true"

                />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:text="@string/forget_hint"
                android:textSize="15sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>