<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hhu.carrental.ui.UserSettingActivity"
    android:background="@color/userinfo_back"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/color_title">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:id="@+id/user_setting_back"
            android:layout_centerVertical="true"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:clickable="true"
            android:src="@mipmap/return_icon"
            />
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:layout_centerInParent="true"
            android:text="@string/user_setting_info"
            android:textColor="@color/base_color_text_white"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_selector"
        android:minHeight="60dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/avator"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_set_avator"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:src="@mipmap/default_head" />

            <TextView
                style="@style/Smile.TextView._Black"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:drawablePadding="10dp"
                android:drawableRight="@mipmap/arrow_right"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>


    <View  android:layout_height="1px"
        android:layout_width="match_parent"
        android:background="@color/color_line"

        />

    <RelativeLayout
        android:id="@+id/layout_nick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_selector"
        android:minHeight="50dp"
        android:padding="10dp" >

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/nick_name"
            android:textSize="@dimen/text_size_small"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:orientation="horizontal" >


         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:id="@+id/nick_name"
             />

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:drawablePadding="10dp"
            android:drawableRight="@mipmap/arrow_right"
            android:textSize="18sp"/>

        </LinearLayout>
    </RelativeLayout>


    <View  android:layout_height="1px"
        android:layout_width="match_parent"
        android:background="@color/color_line"

        />


    <RelativeLayout
        android:id="@+id/user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_selector"
        android:minHeight="50dp"
        android:padding="10dp" >

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/email"
            android:textSize="@dimen/text_size_small"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:orientation="horizontal" >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/show_email"
                />



        </LinearLayout>
    </RelativeLayout>


    <View  android:layout_height="1px"
        android:layout_width="match_parent"
        android:background="@color/color_line"

        />

    <RelativeLayout
        android:id="@+id/layout_sex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_selector"
        android:minHeight="50dp"
        android:padding="10dp" >

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/sex"
            android:textSize="@dimen/text_size_small"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:orientation="horizontal" >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/show_sex"
                />

            <TextView
                style="@style/Smile.TextView._Black"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:drawablePadding="10dp"
                android:drawableRight="@mipmap/arrow_right"
                android:textSize="18sp"/>

        </LinearLayout>
    </RelativeLayout>

    <View  android:layout_height="1px"
        android:layout_width="match_parent"
        android:background="@color/color_line"

        />


    <RelativeLayout
        android:id="@+id/layout_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_selector"
        android:minHeight="50dp"
        android:padding="10dp" >

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/user_phone"
            android:textSize="@dimen/text_size_small"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:orientation="horizontal" >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/show_phone"
                />

            <TextView
                style="@style/Smile.TextView._Black"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:drawablePadding="10dp"
                android:drawableRight="@mipmap/arrow_right"
                android:textSize="18sp"/>

        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
