<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingLeft="10dp"
    android:id="@+id/layout_trip">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"

        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:src="@mipmap/list_node" />

        <TextView
            android:id="@+id/trip_finish_time"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:textColor="@color/black_font"
            android:textSize="@dimen/text_size_small" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="@string/bikeNo"
                android:textSize="@dimen/trip_small" />

            <TextView
                android:id="@+id/bike_no"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:textSize="@dimen/trip_small" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"

            android:orientation="horizontal">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:src="@mipmap/my_trip_item_duration_img" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingLeft="5dp"
                    android:text="@string/trip_time"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/trip_small"/>
                <TextView
                    android:id="@+id/trip_time"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingLeft="5dp"

                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/trip_small"/>
                </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:src="@mipmap/my_trip_item_cost_img" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingLeft="5dp"
                    android:text="@string/trip_cost"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/trip_small"/>
                <TextView
                    android:id="@+id/trip_cost"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingLeft="5dp"

                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/trip_small"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>